[fix][style] fix the Comment style to prevent elemnet overlap

--- a/src/Components/HomePage/TripInfo/Comment/index.css
+++ b/src/Components/HomePage/TripInfo/Comment/index.css
@@ -10,7 +10,7 @@
   padding-top: 30px;
   padding-bottom: 30px;
   display: inline-block;
-  width: 700px;
+  width: 850px;
   color: #2d3436;
   background-color: white;
   border-radius: 50px;
